# Cinema_django

./: .env.example  Makefile  README.md  main.py  pyproject.toml
config/: exceptions.py  settings.py  urls.py
django_api/config/: exceptions.py  logger.py  settings.py  urls.py
django_api/movies/: admin.py  dto.py  serializers.py  tests.py  urls.py  views.py
django_api/movies/migrations/: 0001_initial.py  0003_alter_genre_options_alter_movie_options.py  0004_alter_movie_duration_minutes.py
django_api/movies/services/: movie_service.py  notification_service.py
django_api/users/: dto.py  serializers.py  signals.py  tests.py  urls.py  views.py
django_api/users/migrations/: 0002_alter_subscription_options_alter_userprofile_options.py
django_api/users/services/: subscription_service.py  watchlist_service.py
movies/: admin.py  dto.py  filters.py  models.py  serializers.py  urls.py  views.py
movies/fixtures/: genres.json
movies/migrations/: 0002_alter_movie_title.py
movies/services/: genre_service.py
search_service/: main.py
search_service/api/: router.py
search_service/api/v1/: auth.py
search_service/core/: config.py  database.py  logger.py  security.py
search_service/models/: movie.py  user.py
search_service/schemas/: auth.py  movie.py
users/: admin.py  dto.py  models.py  serializers.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/services/: watchlist_service.py
